--- a/app/views/public/institutions/show.html.erb
+++ b/app/views/public/institutions/show.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="row pt-2">
-    <div class="col-md-10 offset-md-1">
+    <div class="col-md-11">
       <table class="table">
         <tr>
           <th>
@@ -93,6 +93,7 @@
                               <% end %>
                         </h4>
             </th>
+            
             <th><span id="star-rate-<%= review.id %>"></span>
               <script>
                 var elm = document.getElementById("star-rate-<%= review.id %>")
