--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,15 @@
   
   <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-      <div class="container"> <a class="navbar-brand" href="/">
+     <div class="container">
+       <a class="navbar-brand" href="/">
         <span>さうなび</span></a>  
-   
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
+             
     <% if user_signed_in? %>         
               <li>
                 <%= link_to new_institution_path, class: "nav-link text-light"  do %><i class="fas fa-plus"></i>施設登録
@@ -74,6 +75,7 @@
                   <% end %>
               </li>
              <% end %>
+             
             </ul>
           </div>
       </div>
@@ -83,13 +85,13 @@
       <%= yield %>
       </main>  
         <footer>
-          <div class="container mt-5">
+        
             <div class="row">
               <div class="mx-auto">
                 <p>CopyRight Infratop.inc</p>
               </div>
             </div>
-          </div>
+          
         </footer>
         </body>
 </html>
