--- a/app/views/public/institutions/new.html.erb
+++ b/app/views/public/institutions/new.html.erb
@@ -1,6 +1,14 @@
 <div class="container">
    <div class="row pt-5">
-    <div class="col-xl-9 ml-auto">
+    <div class="col-md-9 ml-auto">
+        <% if @institution.errors.any? %>
+  <%= @institution.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @institution.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model: @institution, url: '/institutions', method: :post do |f| %>
 <h4>施設新規登録</h4>
