--- a/app/views/public/institutions/trip.html.erb
+++ b/app/views/public/institutions/trip.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="row pt-2">
-    <div class="col-md-10 offset-md-1">
+    <div class="col-md-11">
       <table class="table">
         <tr>
           <th>
